                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 26-09-2005 fixed: DVDPlayer playback failed on DreamX 1480. (Also more early/late using mplayer on those boxes) (updated)
 - 26-09-2005 fixed: GYM should play now and not crash xbox.
 - 25-09-2005 added: GYM (Genesis music file) codec to paplayer. Based on gens' apu.
 - 25-09-2005 fixed: Minor big/little-endian issue in AC3Codec. (PAPlayer)
 - 25-09-2005 fixed: ac3/dts stopped decoding if a bad frame was found, bad frames are now ignored. (PAPlayer)
 - 25-09-2005 added: rar files can now be extracted using filemanager.
 - 25-09-2005 updated: German language file
 - 25-09-2005 updated: Italian language file (Thnx to kotix)
 - 25-09-2005 updated: Norwegian language file (Thnx to vnm)
 - 25-09-2005 updated: French language file (Thnx to lacrevette)
 - 25-09-2005 changed: removed load of libdvdcss-2.dll from InputStreamNavigator
 - 25-09-2005 changed: cdripper now uses original vorbis dlls ( dlls in \system\cdrip got updated)
 - 25-09-2005 fixed: my music files not filtering files by extension
 - 25-09-2005 fixed: problems using window ID 5
 - 25-09-2005 added: dlls load referenced dlls when a dll is loaded
 - 25-09-2005 updated: Xboxmediacenter.xml, added .SPC to music extensions
 - 24-09-2005 fixed: Visualization NONE resulted in 1 logentry / frame
 - 24-09-2005 updated: kai-vectors.xml
 - 24-09-2005 changed: added more default paths for MyPrograms bookmarks (emulators/apps).
 - 24-09-2005 fixed: Potential crash in NSF codec.
 - 24-09-2005 added: SPC (Super NES sound file) codec for paplayer. Based on snes9x's APU.